users auth api database tables schema added
