# routes/auth/db_structs.go
@@ -1,7 +1,0 @@
-package auth
-
-type Tbl_Users struct {
-	ID       int    `json:"id"`
-	Username string `json:"username"`
-	Password string `json:"password"`
-}
